--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,15 +7,15 @@
 
           <ul class="nav masthead-nav">
             <li class="active">
-			<a href="http://localhost:3000/kingsong1">kingsong1</a>
+			<a href="https://rocky-beyond-87014.herokuapp.com/kingsong1">kingsong1</a>
 		</li>
 
 				<li>
-		 <a href="http://localhost:3000/kingsong2">kingsong2</a>
+		 <a href="https://rocky-beyond-87014.herokuapp.com/kingsong2">kingsong2</a>
 		</li>
 
 	<li>
-		<a href="http://localhost:3000/kingsong3">kingsong3</a>
+		<a href="https://rocky-beyond-87014.herokuapp.com/kingsong3">kingsong3</a>
 		</li>
 			</ul>
 		 </div>
@@ -42,7 +42,7 @@
 </div>
 
 
-<style type="text/css">
+<style >
 	/*
 
 * Based on Cover by https://twitter.com/mdo"  @mdo
