--- a/app/views/static_pages/kingsong1.html.erb
+++ b/app/views/static_pages/kingsong1.html.erb
@@ -16,9 +16,9 @@
 							          <h1 class="masthead-brand"></h1>
 
 							          <p align = "right">
-							              <a href="http://localhost:3000/home">home</a>
-							              <a href="http://localhost:3000/kingsong2">kingsong2</a>
-							              <a href="http://localhost:3000/kingsong3">kingsong3</a>
+							              <a href="https://rocky-beyond-87014.herokuapp.com/home">home</a>
+							              <a href="https://rocky-beyond-87014.herokuapp.com/kingsong2">kingsong2</a>
+							              <a href="https://rocky-beyond-87014.herokuapp.com/kingsong3">kingsong3</a>
 							           
 							          </p>
 							        </div>
