--- a/app/views/static_pages/kingsong3.html.erb
+++ b/app/views/static_pages/kingsong3.html.erb
@@ -11,9 +11,9 @@
                                 </div>
                             </div>
                             <p align = "right">
-							              <a href="http://localhost:3000/home">Home</a>
-							              <a href="http://localhost:3000/kingsong1">kingsong1</a>
-							              <a href="http://localhost:3000/kingsong2">kingsong2</a>
+							              <a href="https://rocky-beyond-87014.herokuapp.com/home">Home</a>
+							              <a href="https://rocky-beyond-87014.herokuapp.com/kingsong1">kingsong1</a>
+							              <a href="https://rocky-beyond-87014.herokuapp.com/kingsong2">kingsong2</a>
 							           
 							          </p>
                             <div class="panel-body">
